--- a/css/style.css
+++ b/css/style.css
@@ -41,10 +41,39 @@ h1 {
 
 .photographer_section article h2 {
     color: #D3573C;
-    font-size: 36px;
+    font-size: 3rem;
+    
 }
 
 .photographer_section article img {
     height: 200px;
     width: 200px;
+    border-radius: 100px;
+}
+.photographer_section article a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-decoration: none;
+}
+
+
+.city, .country {
+    color: #901C1C;
+    font-size: 1rem;
+    line-height: 16.93px;
+    
+}
+
+.tagline{
+    font-size: 0.6rem;
+    line-height: 2.5;
+    line-height: 13.02px;
+}
+
+.price{
+    font-size: 0.5rem;
+    color: #757575;
+    line-height: 11.72px;
 }
