--- a/css/style.css
+++ b/css/style.css
@@ -27,22 +27,21 @@ h1 {
 .photographer_section {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    gap: 70px;
-    margin-top: 100px;
+    margin: 5%;
 }
 
 .photographer_section article {
-    justify-self: center;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin: 5%;
 }
 
 .photographer_section article h2 {
     color: #D3573C;
-    font-size: 3rem;
-    
+    font-size: 2.5rem;
+    text-align: center;
 }
 
 .photographer_section article img {
@@ -52,28 +51,26 @@ h1 {
 }
 .photographer_section article a {
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
     flex-direction: column;
     text-decoration: none;
+    width: 100%;
 }
-
-
-.city, .country {
+section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.location {
     color: #901C1C;
-    font-size: 1rem;
-    line-height: 16.93px;
-    
+    font-size: 1.5rem;
 }
-
 .tagline{
-    font-size: 0.6rem;
-    line-height: 2.5;
-    line-height: 13.02px;
+    font-size: 1.2rem;
+    text-align: center;
 }
-
 .price{
-    font-size: 0.5rem;
+    font-size: 1rem;
     color: #757575;
-    line-height: 11.72px;
 }
