--- a/css/photographer.css
+++ b/css/photographer.css
@@ -8,6 +8,18 @@
     margin: 0 100px;
 }
 
+.photograph_header_page{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.photograph_picture {
+    height: 200px;
+    width: 200px;
+    border-radius: 100px;
+}
+
 .contact_button {
     font-size: 20px;
     font-weight: bold;
@@ -19,6 +31,28 @@
     background-color: #901C1C;
     border-radius: 5px;
     cursor: pointer;
+}
+
+.medias{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin: 5%;
+    background-color: #FFF;
+}
+
+.image_section{
+   
+    width: 350px; 
+    height: 350px;
+    margin: 5%;
+    position: relative;
+    overflow: hidden;
+}
+
+.photograph_image{
+    width: 500px; 
+    height: auto;
+    position: absolute;
 }
 
 .modal {
