--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ h1 {
     text-decoration: none;
     width: 100%;
 }
-section{
+.descrPhotographers{
     display: flex;
     flex-direction: column;
     align-items: center;
