--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,11 @@ header {
     align-items: center;
     height: 90px;
 }
+main{
+    margin-bottom: 250px;
+}
 
-h1 {
+.title_photographers {
     color: #901C1C;
     margin-right: 100px;
 }
@@ -66,7 +69,7 @@ h1 {
     color: #901C1C;
     font-size: 1.5rem;
 }
-.tagline{
+.descrPhotographers .tagline{
     font-size: 1.2rem;
     text-align: center;
 }
@@ -74,3 +77,5 @@ h1 {
     font-size: 1rem;
     color: #757575;
 }
+
+
