--- a/css/photographer.css
+++ b/css/photographer.css
@@ -1,6 +1,12 @@
-#contact_modal {
-    display: none;
-}
+/* #contact_modal, #lightbox_modal {
+    height: 1px;
+    left: 0;
+    overflow: hidden;
+    position: absolute;
+    top: -10000px;
+    width: 1px;
+} */
+
 
 .photograph-header {
     background-color: #FAFAFA;
@@ -97,7 +103,99 @@
     width: 25%;
     border-radius: 5px;
 } 
-.modal {
+/* Global */
+.sr-only {
+    position:absolute;
+    width:1px;
+    height:1px;
+    padding:0;
+    margin:-1px;
+    overflow:hidden;
+    clip:rect(0,0,0,0);
+    white-space:nowrap;
+    border:0
+ }
+  
+ .carousel {
+    border-radius: 5px;
+    background-color: #ffff;
+    width: 90%;
+    max-height: 90%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    z-index: 2;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+ }
+  
+ .carousel-item {
+    height: 200px;
+    width: 100%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    list-style-type: none;
+ }
+  
+ .item-0 {
+    background-color: tomato;
+ }
+  
+ .item-1 {
+    background-color: blue;
+    display: none;
+ }
+  
+ .item-2 {
+    background-color: green;
+    display: none;
+ }
+  
+ .img {
+    height: 40px;
+    width: 40px;
+    background-color: white;
+    border-radius: 50%;
+    display: flex;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    align-items: center;
+    justify-content: center;
+ }
+  
+ .prev-image {
+    left: 20px;
+ }
+  
+ .fa-arrow-circle-left,
+ .fa-arrow-circle-right {
+    font-size: 30px;
+ }
+  
+ .next-image {
+    right: 20px;
+ }
+  
+ .caroussel-picture {
+    height: 300px;
+    width: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+ }
+ .caroussel-picture img{
+    height: 300px;
+    width: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+ }
+ 
+.modal{
     border-radius: 5px;
     background-color: #DB8876;
     width: 40%;
@@ -186,15 +284,6 @@ form #message {
     opacity: 0.5;
  }
 
- .carrousel{
-    border-radius: 5px;
-    width: 40%;
-    max-height: 90%;
-    align-items: center;
-    padding: 2%;
-    z-index: 2;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+ ul{
+     padding: 0;
  }
