--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ main{
     margin-bottom: 250px;
 }
 
-.title_photographers {
+header .title_photographers {
     color: #901C1C;
     margin-right: 100px;
 }
@@ -68,14 +68,17 @@ main{
 .location {
     color: #901C1C;
     font-size: 1.5rem;
+    margin :0;
 }
 .descrPhotographers .tagline{
     font-size: 1.2rem;
     text-align: center;
+    margin :0;
 }
 .price{
     font-size: 1rem;
     color: #757575;
+    margin :0;
 }
 
 
