--- a/css/photographer.css
+++ b/css/photographer.css
@@ -1,12 +1,3 @@
-/* #contact_modal, #lightbox_modal {
-    height: 1px;
-    left: 0;
-    overflow: hidden;
-    position: absolute;
-    top: -10000px;
-    width: 1px;
-} */
-
 
 .photograph-header {
     background-color: #FAFAFA;
@@ -167,7 +158,7 @@
     cursor: pointer;
     align-items: center;
     justify-content: center;
-    z-index:22;
+    /* z-index:22; */
  }
   
  .prev-image {
@@ -193,7 +184,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 2%;
-    z-index: 2;
+    /* z-index: 2; */
     position: absolute;
     left: 50%;
     top: 50%;
@@ -266,6 +257,7 @@ form #message {
 
  .opacity{
     opacity: 0.5;
+    
  }
 
  ul{
@@ -313,19 +305,19 @@ form #message {
 } */
 .medias_sorting{
     margin-left: 5%;
+    margin-top: 1%;
 }
 
 .header-dropdown-link {
     border: 1px solid transparent;
-    color: #000000;
-   
+    color: #0000;
     text-decoration: none;
-   
 }
 
 .header-dropdown-link:hover,
 .header-dropdown-link:focus {
     border: 1px solid #FFF;
+    border-radius: 5px;
 }
 
 .header-dropdown-link-content {
@@ -336,7 +328,7 @@ form #message {
     position: absolute;
     left: 10%;
     top: 400px;
-    z-index: 15;    
+    /* z-index: 15;     */
     list-style-type: none;
     color: #FFF;
     padding: 10px 15px 10px 25px;
@@ -347,8 +339,7 @@ form #message {
     text-decoration: none;
 }
 
-.header-dropdown-link-content:hover,
-.header-dropdown-link-content:focus {
+.header-dropdown-link-content:hover{
     background-color: #DB8876;
     cursor: pointer;
     border-radius: 4px;
@@ -362,10 +353,9 @@ form #message {
     position: absolute;
     left: 10%;
     top: 424px;
-    z-index: 10;
+    /* z-index: 10; */
     width : 150px;
 }
-
 
 .dropdown_menu .line{
     width: 65%; 
@@ -418,3 +408,7 @@ form #message {
     top: -10000px;
     width: 1px;
  }
+
+.pointerCancel{
+    pointer-events: none;
+}
