--- a/css/photographer.css
+++ b/css/photographer.css
@@ -91,6 +91,15 @@
     height: 100%;
     
 }
+.like{
+    border: none;
+    background-color: transparent;
+}
+
+
+.fa-heart{
+    font-size: 1.2rem;
+}
 .title_likes_media{
     display: flex;
     justify-content: space-between;
@@ -316,7 +325,6 @@ form #message {
     display: flex;
     justify-content: space-between;
     background-color: #901C1C;
-    border-radius: 4px;
     position: absolute;
     left: 10%;
     top: 400px;
@@ -326,19 +334,19 @@ form #message {
     padding: 10px 15px 10px 25px;
     width : 110px;
 }
-
-
-.header-dropdown-link-content a{
-    color: #FFF;
-    text-decoration: none;
+.border{
+    border-radius: 4px;
 }
+.change-border{
+    border-radius: 4px 4px 0px 0px;
+}
+
 .header-dropdown-link-content button{
     color: #FFF;
     background-color: #901C1C;
     text-decoration: none;
-    border-radius: 4px;
+    border: none; 
 }
-
 
 .dropdown_menu {
     background-color: #901C1C;
@@ -347,16 +355,17 @@ form #message {
     padding-left: 0;
     position: absolute;
     left: 10%;
-    top: 422px;
+    top: 420px;
     z-index: 10;
     width : 150px;
 }
 
 .dropdown_menu .line{
-    width: 110px; 
-    border-bottom: 1.5px solid #fff;
+    width: 120px; 
+    height:0;
     border-top: 1.5px solid #fff;
     margin: auto;
+    padding: 0; 
 }
 
 .dropdown li {
@@ -367,9 +376,11 @@ form #message {
     padding: 5px 25px 10px; 
     
 }
-.dropdown a{
-   color: #fff;
+.dropdown button{
+    color: #fff;
     text-decoration: none;
+    background-color: #901C1C;
+    border: none; 
 }
 
 
