--- a/css/photographer.css
+++ b/css/photographer.css
@@ -6,7 +6,7 @@
     width: 90%;
 }
 
-.photograph_header-page{
+.photograph-header-page{
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -14,20 +14,20 @@
 }
 
 
-.photograph_infos h1{
+.photograph-infos h1{
     font-size: 3rem;
     color:#D3573C;
     font-weight:lighter;
     margin : 0;
 }
 
-.photograph_picture {
+.photograph-picture {
     height: 200px;
     width: 200px;
     border-radius: 100px;
 }
 
-.contact_button, #form_submit {
+.contact-button, #form-submit {
     font-size: 20px;
     font-weight: bold;
     color: white;
@@ -40,8 +40,8 @@
     cursor: pointer;
    
 }
-.contact_button:focus,
-.contact_button:hover{
+.contact-button:focus,
+.contact-button:hover{
     background-color:#DB8876;
     outline:none
 }
@@ -60,8 +60,7 @@
     margin: auto;
 }
 
-.image_section, .video_section{
-    display: inline-block;
+.image-section, .video-section{
     width: 350px; 
     height: 350px;
     overflow: hidden; 
@@ -69,9 +68,14 @@
     border-radius: 5px;
     position: relative;
 }
+.image-section:focus,
+.image-section:hover,
+.video-section:focus,
+.video-section:hover{
+    border: 2px solid #008cff;
+}
 
-
-.photograph_image{
+.photograph-image{
     position: absolute;
     left: 50%;
     top: 50%;
@@ -82,11 +86,7 @@
             transform: translate(-50%,-50%);
 }
 
-.image_section:focus,
-.image_section:hover{
-    border: 2px solid black;
-}
-.photograph_video{
+.photograph-video{
     min-width: auto;
     height: 100%;
     
@@ -100,20 +100,20 @@
 .fa-heart{
     font-size: 1.2rem;
 }
-.title_likes_media{
+.title-likes-media{
     display: flex;
     justify-content: space-between;
     font-size: 1.2rem;
 }
 
-.title_likes_media .like{
+.title-likes-media .like{
     color: #901C1C;
 }
-.title_likes_media .media_title{
+.title-likes-media .media-title{
     margin-top: 2%;
     color: #901C1C;
 }
-.title_likes_media .media_likes{
+.title-likes-media .media-likes{
     margin-top: 2%;
     color: #901C1C;
 }
@@ -138,14 +138,17 @@
 }
 
 .carousel-item{
-    height: 100%;
+    height: 80%;
 }
 
-.source_content{
+.source-content{
     width: auto;
     margin: auto;
 }
-  
+
+.title-lightbox{
+    color: #901C1C;
+}
 .slide {
     min-width: 100%;
     display: flex;
@@ -294,20 +297,23 @@ form #message {
     width: 20%;
     border-radius: 5px;
 } 
- footer .photographer_price, .total_likes{
+ footer .photographer-price, .total-likes{
     font-weight: bold;
  }
 
- footer .total_likes_content{
+ footer .total-likes-content{
     display: flex;
  }
 
-.medias_sorting{
+.medias-sorting{
     display: flex;
     margin-left: 5%;
     margin-top: 1%;
 }
 
+.select-sorting{
+    font-size: 1rem;
+}
 
 .header-dropdown-link {
     border: 1px solid transparent;
@@ -331,8 +337,8 @@ form #message {
     /* z-index: 15;     */
     list-style-type: none;
     color: #FFF;
-    padding: 10px 15px 10px 25px;
-    width : 110px;
+    padding: 10px 15px 10px 20px;
+    width : 115px;
 }
 .border{
     border-radius: 4px;
@@ -348,7 +354,7 @@ form #message {
     border: none; 
 }
 
-.dropdown_menu {
+.dropdown-menu {
     background-color: #901C1C;
     border-radius: 0px 0px 4px 4px;
     flex-direction: column;
@@ -360,12 +366,14 @@ form #message {
     width : 150px;
 }
 
-.dropdown_menu .line{
+.dropdown-menu .line{
     width: 120px; 
-    height:0;
     border-top: 1.5px solid #fff;
+    border-bottom: 1.5px solid #fff;
     margin: auto;
-    padding: 0; 
+    padding-right: 0px;
+    padding-left: 10px;
+
 }
 
 .dropdown li {
@@ -373,7 +381,7 @@ form #message {
     color: #FFF;
     width:  100px;
     margin: auto;
-    padding: 5px 25px 10px; 
+    padding: 4px 25px 10px 10px;; 
     
 }
 .dropdown button{
