--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ main{
     margin-bottom: 250px;
 }
 
-header .title_photographers {
+header .title-photographers {
     color: #901C1C;
     margin-right: 100px;
 }
@@ -27,13 +27,13 @@ header .title_photographers {
     margin-left: 100px;
 }
 
-.photographer_section {
+.photographer-section {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     margin: 5%;
 }
 
-.photographer_section article {
+.photographer-section article {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -41,18 +41,19 @@ header .title_photographers {
     margin: 5%;
 }
 
-.photographer_section article h2 {
+.photographer-section article h2 {
     color: #D3573C;
     font-size: 2.5rem;
     text-align: center;
+    margin-bottom: 0;
 }
 
-.photographer_section article img {
+.photographer-section article img {
     height: 200px;
     width: 200px;
     border-radius: 100px;
 }
-.photographer_section article a {
+.photographer-section article a {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -60,7 +61,7 @@ header .title_photographers {
     text-decoration: none;
     width: 100%;
 }
-.descrPhotographers{
+.descr-photographers{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -70,7 +71,7 @@ header .title_photographers {
     font-size: 1.5rem;
     margin :0;
 }
-.descrPhotographers .tagline{
+.descr-photographers .tagline{
     font-size: 1.2rem;
     text-align: center;
     margin :0;
